[package]
name = "array_ext"
version = "0.2.0"
authors = ["wolfiestyle <slayerbeast@gmail.com>"]
description = "Extra functionality for Rust arrays"
documentation = "https://docs.rs/array_ext"
repository = "https://github.com/wolfiestyle/array_ext"
readme = "README.md"
keywords = ["array", "generic", "extension"]
license = "MIT"
edition = "2018"

[dependencies]
seq-macro = "0.1.4"
