[package]
name = "array_ext"
version = "0.4.0"
authors = ["wolfiestyle <slayerbeast@gmail.com>"]
description = "Extra functionality for Rust arrays"
documentation = "https://docs.rs/array_ext"
repository = "https://github.com/wolfiestyle/array_ext"
readme = "README.md"
keywords = ["array", "generic", "extension"]
license = "MIT"
edition = "2021"

[features]
nightly = []

[dependencies]
